add timers, add questions, add options

--- a/index.html
+++ b/index.html
@@ -7,6 +7,23 @@
 </head>
 <body>
 
+	<div class="container">
+
+		<h1>Who Knows What Trivia Game</h1>
+
+		<h3>Time Remaining: <span id="timeLimit"></span></h3>
+
+		<button id="start">Start</button>
+
+		<div class="gameWindow">
+			<div id="question"></div>
+			<div class="choices"></div>
+		</div>
+
+	</div>
+
+
+
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 	<script type="text/javascript" src="assets/javascript/app.js"></script>
 </body>
