new js using objects

--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
 
 		<h1>Who Knows What Trivia Game</h1>
 
-		<h3>Time Remaining: <span id="timeLimit"></span></h3>
+		<h3 id="timer">Time Remaining: <span id="timeLimit"></span></h3>
 
-		<button id="start">Start</button>
+		<span id="start">Start</span>
 
 		<div class="gameWindow">
 			<div id="question"></div>
 			<div class="choices"></div>
 		</div>
+
+		<div class="finWindow"></div>
 
 	</div>
 
