--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 
 	<div class="container">
 
-		<h1>Who Knows What Trivia Game</h1>
+		<h1 id="title">Attention to Detail: Trivia Game</h1>
 
 		<h3 id="timer">Time Remaining: <span id="timeLimit"></span></h3>
 
-		<span id="start">Start</span>
+		<p id="start">Start</p>
 
 		<div class="gameWindow">
-			<div id="question"></div>
+			<h2 id="question"></h2>
 			<div class="choices"></div>
 		</div>
 
