--- a/index.html
+++ b/index.html
@@ -3,17 +3,25 @@
 <head>
 	<title>Trivia Game</title>
 
+	<link href="https://fonts.googleapis.com/css?family=Bungee+Shade|Slackey" rel="stylesheet">
+
+
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
 
-	<div class="container">
+	<div class="wrapper row">
 
-			<h1 id="title">Attention to Detail: Trivia Game</h1>
+	<div class="play-area align-self-center">
+
+		<h1 id="title">Attention to Detail: Trivia Game</h1>
+
+		<div class="align-self-center mx-auto">
 
 			<h3 id="timer">Time Remaining: <span id="timeLimit"></span></h3>
 
-			<p id="start">Start</p>
+			<p class="start btn btn-info">Start</p>
 
 			<div class="gameWindow">
 				<h2 id="question"></h2>
@@ -22,11 +30,16 @@
 
 			<div class="finWindow"></div>
 
+			</div>
+
+	</div>
 	</div>
 
 
 
-	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 	<script type="text/javascript" src="assets/javascript/app.js"></script>
 </body>
 </html>
