--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 			<h3 id="timer">Time Remaining: <span id="timeLimit"></span></h3>
 
-			<p class="start btn btn-info">Start</p>
+			<button class="start btn btn-danger">Start</button>
 
 			<div class="gameWindow">
 				<h2 id="question"></h2>
